Update LinkedIn URL and fix mobile spacing with proper padding

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <a href="mailto:akashaku32@gmail.com" class="profile-link" data-tooltip="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
-                        <a href="https://linkedin.com/in/akashaku-99a120201" class="profile-link" data-tooltip="LinkedIn">
+                        <a href="https://www.linkedin.com/in/akash-c-99a120201" class="profile-link" data-tooltip="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="tel:+917736970618" class="profile-link" data-tooltip="Phone">
@@ -572,7 +572,7 @@
                                 </div>
                                 <div class="contact-details">
                                     <h4>LinkedIn</h4>
-                                    <p>linkedin.com/in/akashaku-99a120201</p>
+                                    <p>linkedin.com/in/akash-c-99a120201</p>
                                 </div>
                             </div>
                         </div>
